name: xmlb
version: 1.0.0
cabal-version: >=1.2
build-type: Simple
license: PublicDomain
maintainer: Maksim Golubev
stability: beta
bug-reports: maksim.golubev72@gmail.com
synopsis: XML beautifier. The utility for formatting XML
description: The main porpose of this utility is to make XML documents human
             readable. You can also use it to perform the inverse problem
             of removing insignificant white spaces from XML documents.
category: XML
author: Maksim Golubev
tested-with: GHC ==7.10.3
data-dir: ""
 
executable xmlb
    build-depends: HaXml ==1.22.5, base >=4.3.1.0,
                   cmdargs >=0.9.3, temporary >=1.1.2.3, Glob >=0.7.1,
                   parallel, text, bytestring, regex-posix, mtl, filepath,
                   directory
    main-is: xmlb.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -O3 -fspec-constr-count=4

test-suite test0
    type: exitcode-stdio-1.0
    hs-source-dirs: test/src/util, test/src/XmlbTest
    main-is: Spec.hs
--    cpp-options: -DTEST
--    ghc-options: -O3
    build-depends:
      hspec >= 1.10.0
     ,HUnit
     ,filepath
     ,process >= 1.1.0

test-suite test1
    type: exitcode-stdio-1.0
    hs-source-dirs: test/src/util, test/src/XmlbTest
    main-is: OnTerminalMain.hs
--    cpp-options: -DTEST
--    ghc-options: -O3
    build-depends:
      hspec >= 1.10.0
     ,HUnit
     ,filepath
     ,process >= 1.1.0
