name: xmlb
version: 1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
maintainer: Maksim Golubev
stability: stable
maintainer: maksim.golubev72@gmail.com
synopsis: XML beautifier. The utility for formatting XML
description: Please see README.md
homepage: http://github.com/killmen0w/xmlb#readme
category: XML
author: Maksim Golubev
tested-with: GHC ==7.10.3
data-dir: ""
 
executable xmlb
    build-depends: HaXml ==1.22.5, base >=4.3.1.0,
                   cmdargs >=0.9.3, temporary >=1.1.2.3, Glob >=0.7.1,
                   parallel, text, bytestring, regex-posix, mtl, filepath,
                   directory
    main-is: xmlb.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -O3 -fspec-constr-count=4
    default-language: Haskell2010
    other-modules:
        FormatXml
        Paths_xmlb

test-suite test0
    type: exitcode-stdio-1.0
    hs-source-dirs: test/src/util, test/src/XmlbTest
    main-is: Spec.hs
--    cpp-options: -DTEST
--    ghc-options: -O3
    default-language: Haskell2010
    build-depends:
      base
     ,directory 
     ,hspec >= 1.10.0
     ,HUnit
     ,filepath
     ,process >= 1.1.0

test-suite test1
    type: exitcode-stdio-1.0
    hs-source-dirs: test/src/util, test/src/XmlbTest
    main-is: OnTerminalMain.hs
--    cpp-options: -DTEST
--    ghc-options: -O3
    default-language: Haskell2010
    build-depends:
      base
     ,directory 
     ,hspec >= 1.10.0
     ,HUnit
     ,filepath
     ,process >= 1.1.0

source-repository head
  type:     git
  location: https://github.com/killmen0w/xmlb
