name: xmlb
version: 1.1.1
cabal-version: >=1.10
build-type: Simple
license: BSD3
maintainer: Maksim Golubev
stability: stable
maintainer: maksim.golubev72@gmail.com
synopsis: XML beautifier. The utility for formatting XML
description: Please see README.md
homepage: http://github.com/killmen0w/xmlb#readme
category: XML
author: Maksim Golubev
data-files:
           test/resources/empty.txt
         , test/resources/enc.xml
         , test/resources/enc.utf16.withBOM.woEnc.xml
         , test/resources/enc.utf16be.xml
         , test/resources/enc.utf16le.xml
         , test/resources/enc1.xml
         , test/resources/garbage.bin
         , test/resources/header.xml
         , test/resources/header.no.attr.xml
         , test/resources/header.strip.xml
         , test/resources/header.bencoding.xml
         , test/resources/header.bencoding.beauty.xml
         , test/resources/header.bencoding.strip.xml
         , test/resources/invalid.xml.bad
         , test/resources/test.spaces.2.xml
         , test/resources/test.spaces.xml
         , test/resources/test.strip.xml
         , test/resources/test.xml
extra-tmp-files:
        .tests-data.tmp
 
executable xmlb
    build-depends: HaXml >=1.25.4, base >=4.3.1.0,
                   cmdargs >=0.9.3, temporary >=1.1.2.3, Glob >=0.7.1,
                   text, bytestring, regex-tdfa, mtl, filepath,
                   directory
                 , deepseq
    main-is: xmlb.hs
    buildable: True
    hs-source-dirs: src
--    ghc-options: -O2
    default-language: Haskell2010
    other-modules:
        FormatXml
        Paths_xmlb

test-suite test0
    type: exitcode-stdio-1.0
    hs-source-dirs: test/src, test/src/util, test/src/XmlbTest
    main-is: Spec.hs
    default-language: Haskell2010
    build-depends:
      base
     ,directory 
     ,hspec >= 1.10.0
     ,HUnit
     ,filepath
     ,process >= 1.1.0
    other-modules:
                  TestUtils
                , XmlbTest.XmlbSpec
                , Paths_xmlb

test-suite test1
    type: exitcode-stdio-1.0
    hs-source-dirs: test/src, test/src/util, test/src/XmlbTest
    main-is: SpecOnTerminal.hs
    default-language: Haskell2010
    build-depends:
      base
     ,directory 
     ,hspec >= 1.10.0
     ,HUnit
     ,filepath
     ,process >= 1.1.0
    other-modules:
                  TestUtils
                , XmlbTest.XmlbSpec
                , Paths_xmlb

source-repository head
  type:     git
  location: https://github.com/killmen0w/xmlb
